# mindproject

./: LICENSE  README.md
autolink/: autolink_readme.html  autolink_readme.md  demo.cpp  hostapd.conf  hostapd.conf-NVR  wpa_supplicant.conf
autolink/include/: wifilink.h
mindsystem/mindclient/source/: easynvr_demo.sln
mindsystem/mindclient/source/easynvr_demo/: easynvr_demo.cpp  easynvr_demo.vcxproj  easynvr_demo.vcxproj.filters  stream.hpp
mindsystem/mindipc/demo/: CMakeLists.txt  main.cpp
mindsystem/mindipc/demo/aac/: aac.cpp  aac.h
mindsystem/mindipc/demo/aad/: aad.cpp  aad.h
mindsystem/mindipc/demo/system/audio_ai/: CMakeLists.txt  ai.cpp  ai.hpp
mindsystem/mindipc/demo/system/audio_ao/: ao.cpp  ao.hpp
mindsystem/mindipc/demo/system/ircut/: ircut.cpp  ircut.h
mindsystem/mindipc/demo/system/rgn/: rgn.cpp  rgn.h
mindsystem/mindipc/demo/system/rgn/st_rgn/: st_common.h  st_rgn.c  st_rgn.h
mindsystem/mindipc/demo/system/sensor/: CMakeLists.txt  sensor.cpp  sensor.hpp
mindsystem/mindipc/demo/system/sys/: sys.cpp  sys.h
mindsystem/mindipc/demo/system/venc/: venc.cpp  venc.h
mindsystem/mindipc/demo/system/vif/: CMakeLists.txt  vif.cpp  vif.h
mindsystem/mindipc/demo/system/vpe/: CMakeLists.txt_release  vpe.cpp  vpe.h
mindsystem/mindipc/demo/testing/: CMakeLists.txt  testing.cpp  testing.h
mindsystem/mindipc/mi/: debugInfo.txt
mindsystem/mindipc/mi/include/: isp_3a_if.h  isp_cus3a_if.h  mi_ai.h  mi_ai_datatype.h  mi_ao.h  mi_disp_datatype.h  (+9 more)
mindsystem/mindsee/: MindSystem_NVR_API.docx  readme.txt
mindsystem/mindsee/mindbase/: Makefile  baseDemo  baseDemo.cpp  readme.txt
mindsystem/mindsee/mindnvr/: CMakeLists.txt  README.md  compileNrun.md  env.cmake
mindsystem/mindsee/mindnvr/app/: CMakeLists.txt  main.cpp
mindsystem/mindsee/mindnvr/app/config/: ILI9881D63_720x1280_MIPI.h  config.hpp  displayout.hpp  timing.hpp
mindsystem/mindsee/mindnvr/app/devices/: CMakeLists.txt  ipcmanager.cpp  ipcmanager.hpp
mindsystem/mindsee/mindnvr/app/manager/: CMakeLists.txt  appinterface.cpp  appinterface.h  manager.cpp  manager.hpp
mindsystem/mindsee/mindnvr/app/public/: global.hpp  log.h  message.hpp  mstarFb.h  router.hpp  threadpool.hpp
mindsystem/mindsee/mindnvr/app/stream/: CMakeLists.txt  isession.hpp  priproto.hpp  stream.hpp
mindsystem/mindsee/mindnvr/app/stream_demo/: CMakeLists.txt  stream_session.hpp
mindsystem/mindsee/mindnvr/app/system/: CMakeLists.txt  isysadec.h  isysai.h  isysao.h  isysdisplay.h  isyshdmi.h  isysmouse.h  isystouch.h  isysvideodecoder.h  sysadapter.cpp  sysadapter.h
mindsystem/mindsee/mindnvr/app/system/I2m/: CMakeLists.txt  sys.cpp  sys.hpp  sysadec.cpp  sysadec.h  sysai.cpp  sysai.h  sysao.cpp  sysao.h  sysbind.hpp  sysdisplay.cpp  sysdisplay.h  syshdmi.cpp  syshdmi.h  sysmouse.cpp  sysmouse.h  systouch.cpp  systouch.h  sysvideodecoder.cpp  sysvideodecoder.h
mindsystem/mindsee/mindnvr/app/system/codec/: CMakeLists.txt  aac2pcm.cpp  aac2pcm.h  pcm2aac.cpp  pcm2aac.h
mindsystem/mindsee/mindnvr/app/ui/: CMakeLists.txt  MG问题讨论.txt  README.md
mindsystem/mindsee/mindnvr/app/ui/inc/: README.md  fb_clrkey.hpp  icon_IPCManager.hpp  icon_call.hpp  icon_nvroptions.hpp  icon_setnet.hpp  icon_settime.hpp  icon_setting.hpp  icon_storagespace.hpp  icon_sysinfo.hpp  icon_topology.hpp  icon_vdec.hpp  icon_videolist.hpp  icon_wlan.hpp  minigui_bootscreen.hpp  minigui_debug.hpp  minigui_entry.hpp  minigui_iconscreen.hpp  minigui_mainscreen.hpp  minigui_resource.hpp  minigui_singleframe.hpp  minigui_talkingsetting.hpp  minigui_test.hpp  nvr_etc.hpp  ui_stringmanager.hpp  ui_wlankeyboard.hpp
mindsystem/mindsee/mindnvr/app/ui/res/: README.md  lison.sh
mindsystem/mindsee/mindnvr/app/ui/res/uicfg/: MiniGUI.cfg  MiniGUI3.0.2.cfg  libts.so.0
mindsystem/mindsee/mindnvr/app/ui/src/: README.md  fb_clrkey.cpp  icon_IPCManager.cpp  icon_call.cpp  icon_nvroptions.cpp  icon_setnet.cpp  icon_settime.cpp  icon_setting.cpp  icon_storagespace.cpp  icon_sysinfo.cpp  icon_topology.cpp  icon_vdec.cpp  icon_videolist.cpp  icon_wlan.cpp  minigui_bootscreen.cpp  minigui_debug.cpp  minigui_entry.cpp  minigui_iconscreen.cpp  minigui_mainscreen.cpp  minigui_resource.cpp  minigui_singleframe.cpp  minigui_talkingsetting.cpp  minigui_test.cpp  nvr_etc.cpp  ui_stringmanager.cpp  ui_wlankeyboard.cpp
mindsystem/mindsee/mindnvr/app/wifi/: CMakeLists.txt  wifimanager.cpp  wifimanager.hpp
mindsystem/mindsee/mindnvr/config_file/: nvr_product.json
mindsystem/mindsee/mindnvr/env/: empty_dir.txt
mindsystem/mindsee/mindnvr/sdk/I2m/: release_commit_201912161602.txt
mindsystem/mindsee/mindnvr/sdk/I2m/env/: cfg80211.ko  clock  cursor.raw  gdb  gdb_run.sh  hostapd.conf  nvr.sh  run.sh  ssw101_wifi_usb.ko
mindsystem/mindsee/mindnvr/sdk/I2m/env/lib/: libnl.so.1
mindsystem/mindsee/mindnvr/sdk/I2m/include/: isp_cus3a_if.h  mi_cipher.h  mi_cipher_datatype.h  mi_ipu.h  mi_ipu_datatype.h  mi_iqserver.h  mi_iqserver_datatype.h  mi_isp.h  mi_isp_3a_datatype.h  mi_isp_datatype.h  mi_isp_iq_datatype.h  mi_ive.h  mi_ive_datatype.h  mi_ldc_datatype.h  mi_md.h  mi_panel.h  mi_panel_datatype.h  mi_rgn_datatype.h  mi_sed.h  mi_sed_datatype.h  mi_sensor_datatype.h  mi_vdisp_datatype.h  mi_vif.h  mi_vif_datatype.h  mi_vpe.h  mi_vpe_datatype.h
mindsystem/mindsee/mindnvr/sdk/P2/include/: isp_3a_if.h  isp_cus3a_if.h  mi_gyro.h  mi_gyro_datatype.h  mi_ipu.h  mi_ipu_datatype.h  mi_ldc.h  mi_mipitx.h  mi_mipitx_datatype.h  mi_rgn.h  mi_sed.h  mi_sed_datatype.h  mi_sensor.h  mi_sensor_datatype.h  mi_shadow.h  mi_shadow_datatype.h  mi_vdisp.h  mi_vpe_datatype.h  sigma_isp_general.h
mindsystem/mindsee/mindnvr/sdk/P2/include/isp/ispahan/: mi_isp.h  mi_isp_api_id.h  mi_isp_datatype.h
mindsystem/mindsee/mindnvr/sdk/P2/include/isp/macaron/: mi_isp.h  mi_isp_datatype.h  mi_isp_iq.h  mi_isp_iq_datatype.h
mindsystem/mindsee/mindnvr/sdk/P2/include/isp/pudding/: mi_isp_3a_datatype.h  mi_isp_api_id.h  mi_isp_datatype.h  mi_isp_iq_datatype.h
mindsystem/mindsee/mindnvr/third/include/: logger.hpp  wifilink.h
mindsystem/mindsee/mindnvr/third/include/octopus/: loopbuffer.h  octopus.h
(+44 files in other folders)
